mount_domount: don't forget to handle MNT_RDONLY. PR/35327 from Christian Biere.